# AgenticSTS

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  NOTICE  README.md
AgenticSTS/: .env.example  .gitignore  .skill-sync-cursor  AGENTS.md  CITATION.cff  CLAUDE.md  LICENSE  NOTICE  README.md  config.py  pyproject.toml  seed.txt
AgenticSTS/data/: shop_catalog_ab_compact_results.json  shop_catalog_ab_isolated_results.json  shop_catalog_ab_results.json  shop_catalog_ab_targeted_results.json  tmp_mcp_state.json  version_compatibility.json
AgenticSTS/docs/: 2026-03-20-monitor-dashboard-design.md  2026-03-31-situation-level-retrieval-design.md  2026-03-31-tool-use-removal-design.md  2026-03-31-tool-use-removal-plan.md  2026-04-08-rich-combat-analytics-design.md  2026-04-09-postrun-enrichment-design.md  2026-04-17-leaderboard-design.md  2026-04-28-mod-english-output-with-chinese-ui.md  2026-04-28-regent-character-support-plan.md  handoff_a1_a5.md  handoff_agent_refactor.md  handoff_sts2_agent_upstream_migration.md  migration_phase0_baseline.md  phase1_sts2_agent_fork_baseline.md  phase2_upstream_state_foundation.md  silent_a10_guide_source_cn.md  skills_tools_audit_cn.md  strategy_reference.md  stream-ui-integration.md  sts2_noncombat_strategy.md  sts2_strategy_compendium.md
AgenticSTS/external_calibration/: README.md
AgenticSTS/frontend/: package-lock.json  package.json  vite.config.ts
AgenticSTS/leaderboard/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
AgenticSTS/prompts/: combat_v_a.py  (+8 more)
(+1478 files in other folders)
