[project]
name = "sts2-agent-mcp"
version = "0.1.0"
description = "Self-evolving autonomous agent for Slay the Spire 2 via MCP"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "anthropic>=0.40",
    "numpy>=1.26",
    "scipy>=1.14",
    "rich>=13.0",
    "filelock>=3.12",
]

[project.optional-dependencies]
monitor = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "websockets>=12.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]
eval = [
    "matplotlib>=3.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
